virt01/manual/torrent/radarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes-excludes: torrent,movies
        backup.velero.io/backup-volumes: radarr-pv
        # Opts this pod into the pod-gateway webhook (VPN egress routing).
        setGateway: "true"
      labels:
        app: radarr
    spec:
      serviceAccountName: radarr-sa
      containers:
        - name: radarr
          image: harbor.nf.lab/proxy.docker.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
              name: radarr-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: radarr-pv
              mountPath: /config
            - name: movies
              mountPath: /movies
            - name: torrent
              mountPath: /data
      volumes:
        - name: radarr-pv
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: movies
          hostPath:
            type: Directory
#          nfs:
            path: /mnt/hdd01/emby/Movies
#            server: 10.0.0.100
        - name: torrent
          hostPath:
            type: Directory
#          nfs:
            path: /mnt/hdd01/torrent
#            server: 10.0.0.100
