virt01/manual/torrent/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: radarr.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: radarr-svc
            port:
              number: 7878
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.k3s.nf.lab
    secretName: radarr-cert-tls
